# ganjoor-pretty

./: .dockerignore  .eslintrc.json  Cargo.toml  Dockerfile  LICENSE  README.md  fly.toml  head.html  pretty.js  script.html  styles.css
.github/workflows/: build.yml
src/: lib.rs  main.rs
static/: head.html  pretty.js  robots.txt  script.html  styles.css
