[package]
name = "ganjoor-pretty"
version = "0.4.4"
edition = "2024"
license = "MIT"
description = "Pretty-print a poem from Ganjoor"
repository = "https://github.com/theodore-s-beers/ganjoor-pretty"
keywords = ["typesetting", "Ganjoor", "Persian", "poem"]
categories = ["internationalization", "template-engine", "text-processing"]

[dependencies]
actix-files = "0.6.6"
actix-web = "4.10.2"
anyhow = "1.0.97"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.19.0"
