[package]
name = "ganjoor-pretty"
version = "0.5.0"
edition = "2024"
license = "MIT"
description = "Pretty-print a poem from Ganjoor"
repository = "https://github.com/theodore-s-beers/ganjoor-pretty"
keywords = ["typesetting", "Ganjoor", "Persian", "poem"]
categories = ["internationalization", "template-engine", "text-processing"]

[dependencies]
actix-files = "0.6.9"
actix-web = "4.12.1"
anyhow = "1.0.100"
reqwest = "0.12.24"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
