[package]
name = "ganjoor-pretty"
version = "0.5.0"
edition = "2024"
license = "MIT"
description = "Pretty-print a poem from Ganjoor"
repository = "https://github.com/theodore-s-beers/ganjoor-pretty"
keywords = ["typesetting", "Ganjoor", "Persian", "poem"]
categories = ["internationalization", "template-engine", "text-processing"]

[dependencies]
actix-files = "0.6.10"
actix-web = "4.13.0"
anyhow = "1.0.102"
reqwest = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.25.0"
